def/force-app/main/default/objects/Offering_Release__c/Offering_Release__c.object-meta.xml
<CustomObject>
    <label>Offering Release</label>
    <nameField>
        <label>Offering Release Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offering Releases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>