def/force-app/main/default/objects/Offering_Release__c/fields/asdf__c.field-meta.xml
<CustomField>
    <fullName>asdf__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offering</label>
    <referenceTo>Offering__c</referenceTo>
    <relationshipLabel>Offering Releases (Offering)</relationshipLabel>
    <relationshipName>Offering_Releases2</relationshipName>
    <type>Lookup</type>
</CustomField>