def/force-app/main/default/objects/Offering_Release__c/fields/changeparentofferid__c.field-meta.xml
<CustomField>
    <fullName>changeparentofferid__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>changeparentofferid</label>
    <referenceTo>Offering__c</referenceTo>
    <relationshipLabel>Offering Releases (changeparentofferid)</relationshipLabel>
    <relationshipName>Offering_Releases1</relationshipName>
    <type>Lookup</type>
</CustomField>