def/force-app/main/default/objects/Offering_Release__c/fields/Current_Stage_Name_formula__c.field-meta.xml
<CustomField>
    <fullName>Current_Stage_Name_formula__c</fullName>
    <formula>Stage__r.Stage_Name_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Stage Name formula</label>
    <type>Text</type>
</CustomField>