def/force-app/main/default/objects/Offering_Release__c/fields/Is_Active_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Is_Active_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active Checkbox</label>
    <type>Checkbox</type>
</CustomField>