def/force-app/main/default/objects/Offering_Release__c/fields/Offering_ID_Master_Detail_Rel__c.field-meta.xml
<CustomField>
    <fullName>Offering_ID_Master_Detail_Rel__c</fullName>
    <label>Offering ID Master Detail Rel</label>
    <referenceTo>Offering__c</referenceTo>
    <relationshipLabel>Offering Releases</relationshipLabel>
    <relationshipName>Offering_Releases</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>