def/force-app/main/default/objects/Offering_Release__c/fields/Offering_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Offering_Name_Formula__c</fullName>
    <formula>Offering_ID_Master_Detail_Rel__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offering Name Formula</label>
    <type>Text</type>
</CustomField>