def/force-app/main/default/objects/Offering_Release__c/fields/relatedofferid__c.field-meta.xml
<CustomField>
    <fullName>relatedofferid__c</fullName>
    <formula>Offering_ID_Master_Detail_Rel__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>relatedofferid</label>
    <type>Text</type>
</CustomField>