def/force-app/main/default/objects/Offering_Release__c/fields/Release_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Release_Name_Text__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Release Name Text</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>