def/force-app/main/default/objects/Offering_Release__c/fields/Release_Version_Text__c.field-meta.xml
<CustomField>
    <fullName>Release_Version_Text__c</fullName>
    <label>Release Version Text</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>