def/force-app/main/default/objects/Offering_Release__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Current Stage Id Look Rel</label>
    <referenceTo>Stage__c</referenceTo>
    <relationshipLabel>Offering Releases</relationshipLabel>
    <relationshipName>Offering_Releases</relationshipName>
    <type>Lookup</type>
</CustomField>