def/force-app/main/default/objects/Offering_Release__c/fields/testtest__c.field-meta.xml
<CustomField>
    <fullName>testtest__c</fullName>
    <formula>Offering_ID_Master_Detail_Rel__r.Name +&apos;crossobjform&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>test</label>
    <type>Text</type>
</CustomField>