def/force-app/main/default/objects/Offering_Release__c/fields/Type_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Type_Picklist__c</fullName>
    <label>Type Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Modified</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>